compiler/weave_syntax/tests/data/Tokens.error
error: Unexpected tokens
        --> <source>:32:1
         |
      32 | and
         | ^^^
      33 | and_eq
         | ^^^^^^
      34 | or
         | ^^
     ... |
     318 | r"raw string \t"
         | ^^^^^^^^^^^^^^^^
     319 | r#"raw string \n"#
         | ^^^^^^^^^^^^^^^^^^
     320 | r##" r#"inner\nraw\nstring"# "##
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
